testsuite/tests/typecheck/should_fail/fd-loop.stderr

fd-loop.hs:12:10: error:
    • The constraint ‘C a b’
        is no smaller than the instance head ‘Eq (T a)’
      (Use UndecidableInstances to permit this)
    • In the instance declaration for ‘Eq (T a)’
